# search_agent

./: .env.example  .gitignore  CONTEXT.md  DEVELOPMENT.md  PRD.md  TASKS_EDRE.md  TESTING.md  __init__.py  base.py  config.py  consolidation.py  e2e_smoke.py  edre_e2e_smoke.py  env.py  llm.py  pyproject.toml  retrieval.py  subgraph.py  tracing.py
docs/adr/: 0001-edre-retrieval-seam.md  0002-evaluation-two-layer-scoring.md  0003-v1-thin-controller-fixed-claims.md  0004-flat-langgraph-no-resume.md  0005-signed-support-refutation-aware.md
edre/: __init__.py  graph.py  models.py  normalizer.py  planner.py  query_generator.py  reranker.py  scorer.py
providers/: __init__.py  brave.py  duckduckgo.py  jina.py  perplexity.py  searxng.py  serper.py  tavily.py
tests/: conftest.py  test_config.py  test_consolidation.py  test_edre_normalizer.py  test_edre_output.py  test_edre_planner.py  test_edre_query_generator.py  test_edre_reranker.py  test_edre_scorer.py  test_edre_skeleton.py  test_edre_termination.py  test_independence.py  test_llm_adapter.py  test_providers.py  test_search_many.py  test_subgraph.py  test_subgraph_slice3.py  test_subgraph_slice4.py  test_subgraph_slice5.py  test_types_contract.py
